<resources>
    <string name="app_name">TiViBro</string>
    <string name="nav_live_tv">Live TV</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_shows">TV shows</string>
    <string name="nav_guide">TV guide</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_history">History</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="set">Set</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="optional">optional</string>
    <string name="required">required</string>
    <string name="not_set">Not set</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="server">Server</string>
    <string name="url">URL</string>
    <string name="background">Background</string>
    <string name="my_group">My group</string>
    <string name="m3u_file">M3U file</string>
    <string name="local_file">Local file</string>
    <string name="epg_url">EPG URL</string>
    <string name="mac_address">MAC address</string>
    <string name="show_password">Show password</string>
    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait…</string>
    <string name="clear_history">Clear history?</string>
    <string name="nothing_found">Nothing found</string>
    <string name="no_history">No history</string>
    <string name="search_history">Search history</string>
    <string name="show_search_history">Show search history</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="channels">Channels</string>
    <string name="no_channels">No channels</string>
    <string name="no_playlists">No playlists</string>
    <string name="all_channels">All channels</string>
    <string name="all_playlists">All playlists</string>
    <string name="favorites">Favorites</string>
    <string name="programs">Programs</string>
    <string name="no_programs">No programs</string>
    <string name="no_information">No information</string>
    <string name="press_ok_to_turn_on">Press OK to turn on channel</string>
    <string name="press_ok_to_show_menu">Press OK to show menu</string>
    <string name="long_ok_to_open_menu">Long OK: open menu</string>
    <string name="confirm_delete_playlist">Delete playlist "%1$s"?</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="playlist_actions">Actions</string>
    <string name="add_playlist">Add playlist</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="manage_favorites">Manage Favorites</string>
    <string name="change_favorite_status">Change Favorite status</string>
    <string name="watch_channel">Watch channel</string>
    <string name="channel_options">Channel options</string>
    <string name="block_channel">Block channel</string>
    <string name="unblock_channel">Unblock channel</string>
    <string name="hide_channel">Hide channel</string>
    <string name="hide_channel_hint">You can show the channel again in "Manage visibility" mode</string>
    <string name="hide_channel_q">Hide channel?</string>
    <string name="manage_visibility">Manage visibility</string>
    <string name="manage_blocking">Manage blocking</string>
    <string name="channel_is_blocked">Channel is blocked</string>
    <string name="group_is_blocked">Group is blocked</string>
    <string name="channel_is_unblocked">Channel is unblocked</string>
    <string name="group_is_unblocked">Group is unblocked</string>
    <string name="block_group">Block group</string>
    <string name="unblock_group">Unblock group</string>
    <string name="hide_group">Hide group</string>
    <string name="hide_group_q">Hide group?</string>
    <string name="hide_group_hint">You can show the group again in the playlist settings</string>
    <string name="show_groups">Show groups</string>
    <string name="show_all_groups">Show all groups</string>
    <string name="hide_all_groups">Hide all groups</string>
    <string name="no_groups">No groups</string>
    <string name="group_name">Group name</string>
    <string name="group_options">Group options</string>
    <string name="delete_group">Delete group</string>
    <string name="delete_group_q">Delete group?</string>
    <string name="delete_group_msg">Group "%1$s" will be deleted</string>
    <string name="group_is_created">Group is created</string>
    <string name="create_group">Create group</string>
    <string name="restore_group_name">Restore group name</string>
    <string name="channels_copy">Channels are copied</string>
    <string name="channels_moved">Channels are moved</string>
    <string name="copy_channels">Copy channels</string>
    <string name="select_channels">Select channels</string>
    <string name="select_groups">Select groups</string>
    <string name="unselect_all">Unselect all</string>
    <string name="show_channels_from_hidden_groups">Show channels from hidden groups</string>
    <string name="show_favorites_only">Show Favorites only</string>
    <string name="show_unassigned_channels">Show unassigned channels</string>
    <string name="there_is_no_channel_in_group">There is no channel in the current group</string>
    <string name="playlist_selection">Playlist selection</string>
    <string name="select_playlists_hint">Select the playlists you want to see in the current group</string>
    <string name="recent_channels">Recent channels</string>
    <string name="turn_on_most_recent_channel">Turn on most recent channel</string>
    <string name="change_channel">Change channel</string>
    <string name="press_again_to_switch">Press again to switch the channel</string>
    <string name="go_to_live_stream">Go to live stream</string>
    <string name="watch_from_start">Watch from start</string>
    <string name="watch_later">Watch later</string>
    <string name="no_catchup_available">No catch-up available</string>
    <string name="open_in_external_player">Open in external player</string>
    <string name="external_players_not_found">External players not found for this format</string>
    <string name="select_channel_logo">Select channel logo</string>
    <string name="logos_folder">Logos folder</string>
    <string name="select_folder_with_logos">Select a folder with logos</string>
    <string name="logos_priority">Logos priority</string>
    <string name="prefer_logos_from_playlist">Prefer logos from playlist</string>
    <string name="prefer_logos_from_folder">Prefer logos from folder</string>
    <string name="prefer_logos_from_epg">Prefer logos from EPG</string>
    <string name="logos_priority_hint">Select whether you want to prefer logos specified in the playlists, logos from the local folder or logos specified in EPG. You can override logos priority for individual playlists in the playlist settings.</string>
    <string name="inexact_matching_logos">Inexact matching for logos files</string>
    <string name="clear_logos_cache">Clear logos cache</string>
    <string name="logos_cache_cleared">Logos cache is cleared</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_names_editor">Channel names editor</string>
    <string name="channel_names_editor_hint">Enter the comma separated lists of prefixes and suffixes to remove from channel names, for example, "US:, UK:" and "| HD, | FHD"</string>
    <string name="prefixes_to_remove">Prefixes to remove</string>
    <string name="suffixes_to_remove">Suffixes to remove</string>
    <string name="live">Live</string>
    <string name="vod">VOD</string>
    <string name="tv">TV</string>
    <string name="catchup">Catch-up</string>
    <string name="hd">HD</string>
    <string name="no_channels_hint">To watch TV channels, please add a playlist provided by your IPTV service</string>
    <string name="no_tv_sources">TiViBro doesn\'t provide any sources of TV channels</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="failed_to_get_data">Failed to get data from server</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_pause">Play/pause</string>
    <string name="stop_playback">Stop playback</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="volume_mute">Volume mute</string>
    <string name="show_menu">Show menu</string>
    <string name="show_control_panel">Show control panel</string>
    <string name="show_info_panel">Show info panel</string>
    <string name="show_info_and_control_panel">Show info panel and control panel</string>
    <string name="show_program_description">Show program description</string>
    <string name="return_to_player">Return to player</string>
    <string name="return_to_current_programs">Return to current programs</string>
    <string name="restart_current_program">Restart current program</string>
    <string name="turn_on_next_channel">Turn on next channel</string>
    <string name="turn_on_previous_channel">Turn on previous channel</string>
    <string name="show_info_panel_next">Show info panel for next channel</string>
    <string name="show_info_panel_previous">Show info panel for previous channel</string>
    <string name="picture_in_picture">Picture-in-picture</string>
    <string name="switch_to_pip_on_home">Switch to picture-in-picture mode on press Home</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="sleep_timer_is_off">Sleep timer is off</string>
    <string name="sleep_timer_is_on">Sleep timer is on</string>
    <string name="sleep_timer_set">Sleep timer is set to %1$d min</string>
    <string name="min_left">%1$d min left</string>
    <string name="until_next_app_start">Until next app start</string>
    <string name="until_program_end">Until program end</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio_tracks">Audio tracks</string>
    <string name="video_tracks">Video tracks</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="aspect_fit">Fit screen</string>
    <string name="aspect_fill">Fill screen</string>
    <string name="aspect_zoom">Zoom</string>
    <string name="aspect_best_fit">Best fit</string>
    <string name="zoom_percent">Zoom %1$d%%</string>
    <string name="default_source">Default source</string>
    <string name="use_default_source">Use default source</string>
    <string name="select_surround_track">Select surround audio track by default</string>
    <string name="tv_guide">TV guide</string>
    <string name="include_vod">Include VOD</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_url">Playlist URL</string>
    <string name="playlist_type">Playlist type</string>
    <string name="test_connection">Test connection</string>
    <string name="episodes">Episodes</string>
</resources>