<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_lg"
        android:paddingEnd="@dimen/spacing_lg"
        android:background="@drawable/osd_scrim_bottom">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:background="@drawable/bg_player_button"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:padding="@dimen/spacing_md"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/guide_title"
            style="@style/TvBro.Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_weight="1"
            android:text="@string/tv_guide" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/days_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:scrollbars="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/channels_list"
            android:layout_width="@dimen/epg_logo_w"
            android:layout_height="match_parent"
            android:background="@drawable/osd_scrim_top"
            android:scrollbars="none" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <FrameLayout
            android:id="@+id/grid_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/programs_rows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" />

            <View
                android:id="@+id/now_line"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/accent"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_lg"
        android:paddingEnd="@dimen/spacing_lg"
        android:paddingTop="@dimen/spacing_xs"
        android:paddingBottom="@dimen/spacing_xs"
        android:background="@drawable/osd_scrim_bottom">

        <TextView
            android:id="@+id/guide_status"
            style="@style/TvBro.Text.Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="150 channels" />

        <TextView
            style="@style/TvBro.Text.Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_ok_to_turn_on" />
    </LinearLayout>
</LinearLayout>
